name:                elykseer-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://www.elykseer.com
license:             GPL-3
license-file:        LICENSE
author:              Alexander Diemand
maintainer:          alex@elykseer.com
copyright:           (c) 2019 Alexander Diemand
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     LXR.Liz
                       LXR.Md5
                       LXR.Sha256
                       LXR.Key256
                       LXR.Key128
                       LXR.DbCtrl
                       LXR.DbFp
                       LXR.Options
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4 && < 5
                     , aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
                       -fno-ignore-asserts

executable elykseer-hs
  main-is:             Main.lhs
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2
                       -fno-ignore-asserts
